--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -33,7 +33,7 @@
                 <dd>
                     <ul>
                         <li><a href="/home/task" title="我的任务">我的任务</a></li>
-                        <li><a href="/home/task/traffic" title="流量任务">流量任务</a></li>
+                        <li><a href="/home/traffic" title="流量任务">流量任务</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -67,7 +67,7 @@
                 <dt><i class="Hui-iconfont">&#xe60c;</i> 发布流量<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="flow.html" title="发布流量">发布流量</a></li>
+                        <li><a href="/home/traffic/add" title="发布流量">发布流量</a></li>
                     </ul>
                 </dd>
             </dl>
