--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -59,7 +59,7 @@
                 <dt><i class="Hui-iconfont">&#xe695;</i> 查看流量<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="findflow.html" title="查看流量">查看流量</a></li>
+                        <li><a href="/home/traffic/findflow" title="查看流量">查看流量</a></li>
                     </ul>
                 </dd>
             </dl>
