--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -75,7 +75,7 @@
                 <dt><i class="Hui-iconfont">&#xe6b6;</i> 查看账单<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="bill-list.html" title="查看账单">查看账单</a></li>
+                        <li><a href="/home/bill" title="查看账单">查看账单</a></li>
                     </ul>
                 </dd>
             </dl>
