--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -107,7 +107,7 @@
                 <dt><i class="Hui-iconfont">&#xe6bb;</i> 任务奖励<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="taskInvite.html" title="任务奖励">任务奖励</a></li>
+                        <li><a href="/home/reward" title="任务奖励">任务奖励</a></li>
                     </ul>
                 </dd>
             </dl>
