--- a/project/Application/Home/View/Money/index.html
+++ b/project/Application/Home/View/Money/index.html
@@ -13,31 +13,31 @@
                             <ul class="choosebox clearfix">
                                 <li>
                                     <input type="radio" name="name" value="cmb" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle current"><img src="images/cmb.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle current"><img src="/images/cmb.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                                 <li>
                                     <input type="radio" name="name" value="icbc" id="" />
-                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="images/icbc.gif"></a>
+                                    <a href="javascript:void(0);" class="platform_radioToggle"><img src="/images/icbc.gif"></a>
                                 </li>
                             </ul>
                             <ul class="showBind">
