--- a/project/Application/Home/View/Task/add.html
+++ b/project/Application/Home/View/Task/add.html
@@ -63,7 +63,7 @@
                                     <{/foreach}>
                                 </div>
                                <input type="hidden" name="shop_id" value="">
-                                <a href="shop.html" target="_blank" id="btnBindNewShop">
+                                <a href="/home/shop" target="_blank" id="btnBindNewShop">
                                     绑定新店铺&nbsp;&nbsp;
                                     <i class="Hui-iconfont"></i>
                                 </a>
